--- a/index.html
+++ b/index.html
@@ -60,12 +60,12 @@
             <div class="input-box">
                 <span class="icon"><ion-icon name="person-outline"></ion-icon></span>
                 <input type="email">
-                <label>email</label>
+                <label>username</label>
             </div>
             <div class="input-box">
                 <span class="icon"><ion-icon name="mail-outline"></ion-icon></span>
                 <input type="email">
-                <label>username</label>
+                <label>email</label>
             </div>
             <div class="input-box">
                 <span class="icon"><ion-icon name="lock-closed-outline"></ion-icon></span>
@@ -217,7 +217,7 @@
             amet, consectetur adipiscing elit,sed do eiusmod tempor</p>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                 amet, consectetur adipiscing elit,sed do eiusmod tempor</p>
-            <a href="#" class="page-btn"> visit more Room &nbsp; &rarr;  </a> 
+            <a href="#" class="page-btn"> read more &nbsp; &rarr;  </a> 
         </div>
     </div>
 
@@ -306,7 +306,7 @@
             <div class="card-content">
                 <h3> A modern  kitchen  </h3>
                 <div class="forword row">
-                    <P> <ion-icon name="calendar-outline"></ion-icon> 17 jan 2024</P>
+                    <P> <ion-icon name="calendar-outline"></ion-icon> 20 may 2024</P>
                     <P> <ion-icon name="person-outline"></ion-icon>  BY <span>Admin</span></P>
                     <div class=f-icon><ion-icon name="chevron-forward-outline" class="forward-icon" ></ion-icon></div>
                 </div>
@@ -322,7 +322,7 @@
             <div class="card-content">
                 <h3> A traditional kitchen  </h3>
                 <div class="forword row">
-                    <P> <ion-icon name="calendar-outline"></ion-icon> 17 jan 2024</P>
+                    <P> <ion-icon name="calendar-outline"></ion-icon> 11 feb 2024</P>
                     <P> <ion-icon name="person-outline"></ion-icon>  BY <span>Admin</span></P>
                     <div class=f-icon><ion-icon name="chevron-forward-outline" class="forward-icon" ></ion-icon></div>
                 </div>
@@ -353,7 +353,7 @@
                 <div class="p-img row"> <img src="img/avatar1.jpg" alt=""  > </div>
                    <div class="column">
                    <h6> John smith</h6>
-                   <p> 15 march 2022</p>
+                   <p> 25 march 2024 </p>
                  </div>
                </div>
         </div>
@@ -367,8 +367,8 @@
             <div class="profile row">
                 <div class="p-img row"> <img src="img/avatar3.jpg" alt=""  > </div>
                    <div class="column">
-                   <h6> John smith</h6>
-                   <p> 15 march 2022</p>
+                   <h6> sam smith </h6>
+                   <p> 12 feb 2024 </p>
                  </div>
                </div>
         </div>
